# lib/apiservers/portlayer/swagger.json
@@ -1365,46 +1365,6 @@
 						}
 					}
 				}
-			},
-			"rename": {
-				"description": "Rename a container to the new name",
-				"operationId": "ContainerRename",
-				"tags": [
-					"containers"
-				],
-				"consumes": [
-					"application/octet-stream"
-				],
-				"parameters": [
-					{
-						"name": "id",
-						"required": true,
-						"in": "path",
-						"description": "The container id",
-						"type": "string"
-					},
-					{
-						"name": "name",
-						"required": true,
-						"in": "query",
-						"description": "New name for the container",
-						"type": "string"
-					}
-				],
-				"responses": {
-					"204": {
-						"description": "no error"
-					},
-					"404": {
-						"description": "no such container"
-					},
-					"409": {
-						"description": "conflict, name already assigned"
-					},
-					"500": {
-						"description": "server error"
-					}
-				}
 			}
 		},
 		"/containers/{handle}": {
@@ -1553,6 +1513,54 @@
 					},
 					"default": {
 						"description": "Error",
+						"schema": {
+							"$ref": "#/definitions/Error"
+						}
+					}
+				}
+			}
+		},
+		"/containers/{handle}/name": {
+			"put": {
+				"description": "Rename a container to the new name",
+				"operationId": "ContainerRename",
+				"tags": [
+					"containers"
+				],
+				"consumes": [
+					"application/json",
+					"application/octet-stream"
+				],
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"name": "handle",
+						"required": true,
+						"in": "path",
+						"type": "string"
+					},
+					{
+						"name": "name",
+						"in": "query",
+						"type": "string",
+						"description": "New name for the container",
+						"required": true
+					}
+				],
+				"responses": {
+					"204": {
+						"description": "no error"
+					},
+					"404": {
+						"description": "no such container"
+					},
+					"409": {
+						"description": "conflict, name already assigned"
+					},
+					"500": {
+						"description": "server error",
 						"schema": {
 							"$ref": "#/definitions/Error"
 						}
